Fixes #5639 - Mobile HTML Email Content Horizontal Scrolling Issue - Content Cut Off.

--- a/app/frontend/apps/desktop/styles/main.css
+++ b/app/frontend/apps/desktop/styles/main.css
@@ -210,6 +210,10 @@
     [dir='ltr'] {
       text-align: left;
     }
+
+    table {
+      max-width: 100%;
+    }
   }
 
   .bg-stripes::before {
