--- a/app/frontend/apps/mobile/styles/main.css
+++ b/app/frontend/apps/mobile/styles/main.css
@@ -165,6 +165,10 @@
     [dir='ltr'] {
       text-align: left;
     }
+
+    table {
+      max-width: 100%;
+    }
   }
 
   .file-list.show-gradient::before {
